--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Vos Créations</title>
+<title>Vos Creations</title>
 
 <link href="https://fonts.googleapis.com/css2?family=Permanent+Marker&family=Montserrat:wght@700;900&display=swap" rel="stylesheet">
 
@@ -139,8 +139,8 @@ z-index:4;
 
 <div class="container">
 <img src="Logo.jpg" class="logo">
-<h1 class="brand">Vos Créations</h1>
-<p class="subtitle">Creative • Bold • Visual Experiences</p>
+<h1 class="brand">Vos Creations</h1>
+<p class="subtitle">Creative â€¢ Bold â€¢ Visual Experiences</p>
 <a href="services.html" class="btn">Explore Services</a>
 </div>
 
@@ -155,4 +155,5 @@ menu.onclick=function(){menu.style.right="-250px";}
 </script>
 
 </body>
+
 </html>
