--- a/order.html
+++ b/order.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Order - Vos Créations</title>
+<title>Order - Vos Creations</title>
 <style>
 body{
 margin:0;
@@ -49,4 +49,5 @@ a{color:#00c3ff;text-decoration:none;}
 <a href="index.html">← Back Home</a>
 </div>
 </body>
+
 </html>
