Update portfolio .html

--- a/portfolio .html
+++ b/portfolio .html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Portfolio - Vos Créations</title>
+<title>Portfolio - Vos Creations</title>
 <style>
 body{
 margin:0;
@@ -32,4 +32,5 @@ a{color:#ff006e;text-decoration:none;}
 <a href="index.html">← Back Home</a>
 </div>
 </body>
+
 </html>
