--- a/index.html
+++ b/index.html
@@ -3,157 +3,174 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Vos Creations</title>
+<title>Vos Créations</title>
 
-<link href="https://fonts.googleapis.com/css2?family=Permanent+Marker&family=Montserrat:wght@700;900&display=swap" rel="stylesheet">
+<!-- Fonts -->
+<link href="https://fonts.googleapis.com/css2?family=Permanent+Marker&display=swap" rel="stylesheet">
 
 <style>
 *{margin:0;padding:0;box-sizing:border-box;}
-body,html{height:100%;font-family:'Montserrat',sans-serif;overflow-x:hidden;}
+html,body{height:100%;width:100%;overflow:hidden;font-family:'Permanent Marker', cursive;}
 
+/* Video Background */
 .video-bg{
-position:fixed;
-right:0;bottom:0;
-min-width:100%;
-min-height:100%;
-object-fit:cover;
-z-index:-1;
+  position:fixed;
+  top:0; left:0;
+  width:100%;
+  height:100%;
+  object-fit:contain; /* desktop-scaled */
+  z-index:-2;
 }
 
+/* Overlay for better text readability */
 .overlay{
-position:absolute;
-top:0;left:0;
-width:100%;
-height:100%;
-background:linear-gradient(135deg, rgba(255,0,150,0.4), rgba(0,204,255,0.4));
-z-index:0;
+  position:absolute;
+  top:0; left:0;
+  width:100%;
+  height:100%;
+  background: linear-gradient(135deg, rgba(255,0,150,0.3), rgba(0,204,255,0.3));
+  z-index:-1;
 }
 
-.container{
-position:relative;
-height:100vh;
-display:flex;
-flex-direction:column;
-justify-content:center;
-align-items:center;
-text-align:center;
-color:white;
-padding:20px;
-}
-
-.logo{
-width:120px;
-margin-bottom:20px;
-}
-
+/* Company Name */
 .brand{
-font-family:'Permanent Marker', cursive;
-font-size:3rem;
-letter-spacing:4px;
-animation:popIn 1.5s ease forwards;
-opacity:0;
+  position:absolute;
+  top:50%;
+  left:50%;
+  transform:translate(-50%, -50%) scale(0);
+  font-size:6rem; /* very big */
+  color:#ff006e;
+  text-shadow: 3px 3px 10px #00fff2;
+  animation:popup 1.5s forwards;
+  z-index:1;
+  text-align:center;
 }
 
-@keyframes popIn{
-0%{transform:scale(0.5);opacity:0;}
-100%{transform:scale(1);opacity:1;}
+/* Pop-up animation */
+@keyframes popup{
+  0%{transform:translate(-50%, -50%) scale(0); opacity:0;}
+  60%{transform:translate(-50%, -50%) scale(1.2); opacity:1;}
+  100%{transform:translate(-50%, -50%) scale(1);}
 }
 
-.subtitle{
-margin-top:15px;
-font-size:1rem;
-letter-spacing:2px;
+/* Bouncing Logo */
+.logo{
+  position:absolute;
+  width:100px;
+  z-index:2;
 }
 
-.btn{
-margin-top:30px;
-padding:12px 25px;
-background:#ff006e;
-color:white;
-text-decoration:none;
-border-radius:30px;
-font-weight:bold;
-transition:0.3s;
-}
-.btn:hover{background:#00c3ff;}
-
+/* Hamburger menu */
 .menu-icon{
-position:fixed;
-top:20px;
-right:20px;
-font-size:28px;
-color:white;
-z-index:2;
-cursor:pointer;
+  position:fixed;
+  top:20px;
+  right:20px;
+  font-size:28px;
+  color:white;
+  z-index:3;
+  cursor:pointer;
 }
 
+/* Side Menu */
 .side-menu{
-position:fixed;
-top:0;
-right:-250px;
-width:250px;
-height:100%;
-background:#111;
-padding-top:60px;
-transition:0.4s;
-z-index:3;
+  position:fixed;
+  top:0;
+  right:-250px;
+  width:250px;
+  height:100%;
+  background:#111;
+  padding-top:60px;
+  transition:0.4s;
+  z-index:4;
 }
 .side-menu a{
-display:block;
-color:white;
-padding:15px 30px;
-text-decoration:none;
+  display:block;
+  color:white;
+  padding:15px 30px;
+  text-decoration:none;
+  font-size:1.2rem;
 }
 .side-menu a:hover{background:#ff006e;}
 
+/* WhatsApp button */
 .whatsapp{
-position:fixed;
-bottom:20px;
-right:20px;
-background:#25D366;
-color:white;
-padding:12px 18px;
-border-radius:30px;
-text-decoration:none;
-font-weight:bold;
-z-index:4;
+  position:fixed;
+  bottom:20px;
+  right:20px;
+  background:#25D366;
+  color:white;
+  padding:12px 18px;
+  border-radius:30px;
+  text-decoration:none;
+  font-weight:bold;
+  z-index:5;
 }
 </style>
 </head>
+
 <body>
 
+<!-- Background Video -->
 <video autoplay muted loop playsinline class="video-bg">
-<source src="video1.mp4" type="video/mp4">
+  <source src="backgroundvideo1.mp4" type="video/mp4">
 </video>
 
 <div class="overlay"></div>
 
-<div class="menu-icon" onclick="openMenu()"></div>
+<!-- Bouncing Logo -->
+<img src="Logo.jpg" class="logo" id="logo">
 
+<!-- Company Name -->
+<h1 class="brand">Vos Créations</h1>
+
+<!-- Hamburger Menu -->
+<div class="menu-icon" onclick="toggleMenu()">☰</div>
 <div class="side-menu" id="menu">
-<a href="index.html">Home</a>
-<a href="services.html">Services</a>
-<a href="portfolio.html">Portfolio</a>
-<a href="order.html">Order</a>
+  <a href="index.html">Home</a>
+  <a href="services.html">Services</a>
+  <a href="portfolio.html">Portfolio</a>
+  <a href="order.html">Order</a>
 </div>
 
-<div class="container">
-<img src="Logo.jpg" class="logo">
-<h1 class="brand">Vos Creations</h1>
-<p class="subtitle">Creative • Bold • Visual Experiences</p>
-<a href="services.html" class="btn">Explore Services</a>
-</div>
+<!-- WhatsApp -->
+<a href="https://wa.me/2349069205351" class="whatsapp" target="_blank">WhatsApp</a>
 
-<a href="https://wa.me/2349069205351" class="whatsapp">WhatsApp</a>
-
+<!-- JS for Side Menu & Bouncing Logo -->
 <script>
-function openMenu(){
-let menu=document.getElementById("menu");
-menu.style.right="0";
-menu.onclick=function(){menu.style.right="-250px";}
+/* Side Menu Toggle */
+function toggleMenu(){
+  let menu=document.getElementById('menu');
+  if(menu.style.right==='0px'){
+    menu.style.right='-250px';
+  }else{
+    menu.style.right='0';
+  }
 }
+
+/* Irregular Bouncing Logo */
+const logo = document.getElementById('logo');
+let posX = Math.random() * (window.innerWidth - 100);
+let posY = Math.random() * (window.innerHeight - 100);
+let velX = (Math.random()*3 +1) * (Math.random() <0.5 ? 1:-1);
+let velY = (Math.random()*3 +1) * (Math.random() <0.5 ? 1:-1);
+
+function moveLogo(){
+  posX += velX;
+  posY += velY;
+
+  // Bounce off edges
+  if(posX < 0 || posX + logo.offsetWidth > window.innerWidth) velX*=-1;
+  if(posY < 0 || posY + logo.offsetHeight > window.innerHeight) velY*=-1;
+
+  // Add slight randomness for irregular motion
+  velX += (Math.random()-0.5)*0.2;
+  velY += (Math.random()-0.5)*0.2;
+
+  logo.style.transform = `translate(${posX}px, ${posY}px)`;
+  requestAnimationFrame(moveLogo);
+}
+moveLogo();
 </script>
 
 </body>
-
 </html>
