--- a/index.html
+++ b/index.html
@@ -28,22 +28,28 @@ html,body{height:100%;width:100%;overflow:hidden;font-family:'Permanent Marker',
   top:0; left:0;
   width:100%;
   height:100%;
-  background: linear-gradient(135deg, rgba(255,0,150,0.3), rgba(0,204,255,0.3));
+  background: linear-gradient(135deg, rgba(255,0,150,0.2), rgba(0,204,255,0.2));
   z-index:-1;
 }
 
-/* Company Name */
-.brand{
+/* Company Name Container */
+.brand-container{
   position:absolute;
   top:45%;
   left:50%;
-  transform:translate(-50%, -50%) scale(0) rotate(-10deg);
+  transform:translate(-50%, -50%);
+  z-index:1;
+  display:flex;
+}
+
+/* Each letter span */
+.brand-container span{
   font-size:6rem;
   color:#ff006e;
   text-shadow: 3px 3px 10px #00fff2;
-  animation: graffiti 1.5s forwards;
-  z-index:1;
-  text-align:center;
+  opacity:0;
+  display:inline-block;
+  animation:letterIn 1s forwards;
 }
 
 /* Slogan */
@@ -55,39 +61,16 @@ html,body{height:100%;width:100%;overflow:hidden;font-family:'Permanent Marker',
   font-size:1.5rem;
   color:white;
   opacity:0;
-  animation: fadeInSlogan 2s forwards;
-  animation-delay:1.5s;
+  animation:fadeInSlogan 2s forwards;
+  animation-delay:3s;
   z-index:1;
 }
 
-/* Graffiti pop-up animation */
-@keyframes graffiti{
-  0%{transform:translate(-50%, -50%) scale(0) rotate(-20deg); opacity:0;}
-  60%{transform:translate(-50%, -50%) scale(1.3) rotate(5deg); opacity:1;}
-  100%{transform:translate(-50%, -50%) scale(1) rotate(0deg);}
-}
-
-/* Slogan fade-in */
-@keyframes fadeInSlogan{
-  0%{opacity:0;}
-  100%{opacity:1;}
-}
-
-/* Bouncing VC Ball */
-.vc-ball{
-  position:absolute;
-  width:80px;
-  height:80px;
-  background: radial-gradient(circle, #ff006e, #ff85d3);
-  border-radius:50%;
-  display:flex;
-  justify-content:center;
-  align-items:center;
-  font-size:1.5rem;
-  color:white;
-  font-weight:bold;
-  text-shadow:0 0 8px #fff, 0 0 15px #ff006e, 0 0 20px #ff85d3;
-  z-index:2;
+/* Letter animation from random directions */
+@keyframes letterIn{
+  0%{opacity:0; transform:translate(var(--x), var(--y)) rotate(-30deg);}
+  60%{opacity:1; transform:translate(0,0) rotate(10deg);}
+  100%{opacity:1; transform:translate(0,0) rotate(0deg);}
 }
 
 /* Hamburger menu */
@@ -135,6 +118,13 @@ html,body{height:100%;width:100%;overflow:hidden;font-family:'Permanent Marker',
   font-weight:bold;
   z-index:5;
 }
+
+/* Basketball style */
+.basketball{
+  position:absolute;
+  width:80px;
+  z-index:2;
+}
 </style>
 </head>
 <body>
@@ -146,11 +136,13 @@ html,body{height:100%;width:100%;overflow:hidden;font-family:'Permanent Marker',
 
 <div class="overlay"></div>
 
-<!-- Bouncing VC Ball -->
-<div class="vc-ball" id="vcBall">VC</div>
+<!-- Bouncing Basketball -->
+<img src="basketball.png" class="basketball" id="basketball">
 
-<!-- Company Name -->
-<h1 class="brand">Vos Créations</h1>
+<!-- Company Name Letter by Letter -->
+<div class="brand-container" id="brandContainer"></div>
+
+<!-- Slogan -->
 <p class="slogan">Your everyday go-to designer</p>
 
 <!-- Hamburger Menu -->
@@ -176,8 +168,26 @@ function toggleMenu(){
   }
 }
 
-/* Irregular Bouncing VC Ball */
-const ball = document.getElementById('vcBall');
+/* Letter-by-letter animation setup */
+const brandText = "Vos Créations";
+const brandContainer = document.getElementById('brandContainer');
+
+brandText.split('').forEach((letter, index)=>{
+  const span = document.createElement('span');
+  span.textContent = letter;
+  
+  // Random X and Y for animation
+  let xOffset = (Math.random()*200 - 100) + "px"; // -100 to 100
+  let yOffset = (Math.random()*200 - 100) + "px";
+  span.style.setProperty('--x', xOffset);
+  span.style.setProperty('--y', yOffset);
+  
+  span.style.animationDelay = `${index * 0.2}s`; // stagger letters
+  brandContainer.appendChild(span);
+});
+
+/* Bouncing Basketball */
+const ball = document.getElementById('basketball');
 let posX = Math.random() * (window.innerWidth - 80);
 let posY = Math.random() * (window.innerHeight - 80);
 let velX = (Math.random()*3 +1) * (Math.random() <0.5 ? 1:-1);
@@ -187,11 +197,9 @@ function moveBall(){
   posX += velX;
   posY += velY;
 
-  // Bounce off edges
   if(posX < 0 || posX + ball.offsetWidth > window.innerWidth) velX*=-1;
   if(posY < 0 || posY + ball.offsetHeight > window.innerHeight) velY*=-1;
 
-  // Slight randomness for irregular motion
   velX += (Math.random()-0.5)*0.2;
   velY += (Math.random()-0.5)*0.2;
 
@@ -202,4 +210,4 @@ moveBall();
 </script>
 
 </body>
-  </html>
+</html>
