--- a/index.html
+++ b/index.html
@@ -5,14 +5,14 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>Vos Créations</title>
 
-<!-- Graffiti Font -->
-<link href="https://fonts.googleapis.com/css2?family=Risque&display=swap" rel="stylesheet">
+<!-- Graffiti-style font -->
+<link href="https://fonts.googleapis.com/css2?family=Fredericka+the+Great&display=swap" rel="stylesheet">
 
 <style>
 *{margin:0;padding:0;box-sizing:border-box;}
-html,body{height:100%;width:100%;overflow:hidden;font-family:'Risque', cursive;}
+html,body{height:100%;width:100%;overflow:hidden;font-family:'Fredericka the Great', cursive;}
 
-/* Video Background */
+/* Background Video */
 .video-bg{
   position:fixed;
   top:0; left:0;
@@ -32,29 +32,27 @@ html,body{height:100%;width:100%;overflow:hidden;font-family:'Risque', cursive;}
   z-index:-1;
 }
 
-/* Top row menu background */
+/* Top row */
 .menu-row{
   position:fixed;
   top:0;
   left:0;
   width:100%;
   height:70px;
-  background: #0066ff; /* blue top bar */
+  background:#0066ff;
   z-index:3;
   display:flex;
   align-items:center;
   justify-content:flex-end;
   padding-right:20px;
 }
-
-/* Hamburger menu bigger */
 .menu-icon{
-  font-size:36px;
+  font-size:40px;
   color:white;
   cursor:pointer;
 }
 
-/* Side Menu */
+/* Side menu */
 .side-menu{
   position:fixed;
   top:0;
@@ -83,13 +81,14 @@ html,body{height:100%;width:100%;overflow:hidden;font-family:'Risque', cursive;}
   transform:translate(-50%, -50%);
   z-index:1;
   display:flex;
+  white-space:nowrap; /* ensure letters stay in one line */
 }
 
 /* Each letter */
 .brand-container span{
-  font-size:7rem;
+  font-size:9rem;
   color:#ff006e;
-  text-shadow: 3px 3px 10px #00fff2;
+  text-shadow: 3px 3px 12px #00fff2;
   opacity:0;
   display:inline-block;
   animation:letterIn 1s forwards;
@@ -101,32 +100,31 @@ html,body{height:100%;width:100%;overflow:hidden;font-family:'Risque', cursive;}
   top:52%;
   left:50%;
   transform:translateX(-50%);
-  font-size:2rem;
+  font-size:3rem;
   color:white;
-  -webkit-text-stroke: 2px black; /* black stroke */
+  -webkit-text-stroke:2px black;
   opacity:0;
   animation:fadeInSlogan 2s forwards;
-  animation-delay:3s;
+  animation-delay:3.5s;
   z-index:1;
 }
 
-/* Letter animation from random directions */
+/* Letter animation */
 @keyframes letterIn{
   0%{opacity:0; transform:translate(var(--x), var(--y)) rotate(-20deg);}
   60%{opacity:1; transform:translate(0,0) rotate(5deg);}
   100%{opacity:1; transform:translate(0,0) rotate(0deg);}
 }
-
 @keyframes fadeInSlogan{
   0%{opacity:0;}
   100%{opacity:1;}
 }
 
-/* VC Ball */
+/* VC ball */
 .vc-ball{
   position:absolute;
-  width:80px;
-  height:80px;
+  width:90px;
+  height:90px;
   background:white;
   border-radius:50%;
   display:flex;
@@ -135,18 +133,18 @@ html,body{height:100%;width:100%;overflow:hidden;font-family:'Risque', cursive;}
   font-size:2rem;
   color:#0066ff;
   font-weight:bold;
-  text-shadow:0 0 5px #0066ff,0 0 10px #00ccff;
+  text-shadow:0 0 6px #0066ff,0 0 12px #00ccff;
   z-index:2;
 }
 
-/* WhatsApp button */
+/* WhatsApp */
 .whatsapp{
   position:fixed;
   bottom:20px;
   right:20px;
   background:#25D366;
   color:white;
-  padding:12px 18px;
+  padding:14px 20px;
   border-radius:30px;
   text-decoration:none;
   font-weight:bold;
@@ -160,7 +158,6 @@ html,body{height:100%;width:100%;overflow:hidden;font-family:'Risque', cursive;}
 <video autoplay muted loop playsinline class="video-bg">
   <source src="backgroundvideo1.mp4" type="video/mp4">
 </video>
-
 <div class="overlay"></div>
 
 <!-- Top Row -->
@@ -182,7 +179,7 @@ html,body{height:100%;width:100%;overflow:hidden;font-family:'Risque', cursive;}
 <!-- Slogan -->
 <p class="slogan">Your everyday go-to designer</p>
 
-<!-- Bouncing VC Ball -->
+<!-- Bouncing VC ball -->
 <div class="vc-ball" id="vcBall">VC</div>
 
 <!-- WhatsApp -->
@@ -192,21 +189,16 @@ html,body{height:100%;width:100%;overflow:hidden;font-family:'Risque', cursive;}
 /* Side Menu Toggle */
 function toggleMenu(){
   let menu=document.getElementById('menu');
-  if(menu.style.right==='0px'){
-    menu.style.right='-250px';
-  }else{
-    menu.style.right='0';
-  }
+  menu.style.right = (menu.style.right==='0px')?'-250px':'0';
 }
 
-/* Letter-by-letter animation setup */
+/* Letter-by-letter animation */
 const brandText = "Vos Créations";
 const brandContainer = document.getElementById('brandContainer');
-
 brandText.split('').forEach((letter,index)=>{
   const span = document.createElement('span');
   span.textContent = letter;
-  let xOffset = (Math.random()*200 - 100) + "px"; 
+  let xOffset = (Math.random()*300 - 150) + "px";
   let yOffset = (Math.random()*200 - 100) + "px";
   span.style.setProperty('--x', xOffset);
   span.style.setProperty('--y', yOffset);
@@ -214,28 +206,22 @@ brandText.split('').forEach((letter,index)=>{
   brandContainer.appendChild(span);
 });
 
-/* Bouncing VC Ball */
+/* Bouncing VC ball */
 const ball = document.getElementById('vcBall');
-let posX = Math.random() * (window.innerWidth - 80);
-let posY = Math.random() * (window.innerHeight - 80);
-let velX = (Math.random()*3 +1) * (Math.random() <0.5 ? 1:-1);
-let velY = (Math.random()*3 +1) * (Math.random() <0.5 ? 1:-1);
-
+let posX = Math.random()*(window.innerWidth-90);
+let posY = Math.random()*(window.innerHeight-90);
+let velX = (Math.random()*3 +1)*(Math.random()<0.5?1:-1);
+let velY = (Math.random()*3 +1)*(Math.random()<0.5?1:-1);
 function moveBall(){
-  posX += velX;
-  posY += velY;
-
-  if(posX < 0 || posX + ball.offsetWidth > window.innerWidth) velX*=-1;
-  if(posY < 0 || posY + ball.offsetHeight > window.innerHeight) velY*=-1;
-
-  velX += (Math.random()-0.5)*0.2;
-  velY += (Math.random()-0.5)*0.2;
-
-  ball.style.transform = `translate(${posX}px, ${posY}px)`;
+  posX+=velX; posY+=velY;
+  if(posX<0 || posX+ball.offsetWidth>window.innerWidth) velX*=-1;
+  if(posY<0 || posY+ball.offsetHeight>window.innerHeight) velY*=-1;
+  velX+=(Math.random()-0.5)*0.2;
+  velY+=(Math.random()-0.5)*0.2;
+  ball.style.transform=`translate(${posX}px, ${posY}px)`;
   requestAnimationFrame(moveBall);
 }
 moveBall();
 </script>
-
 </body>
   </html>
