--- a/index.html
+++ b/index.html
@@ -6,11 +6,11 @@
 <title>Vos Créations</title>
 
 <!-- Fancy calligraphy font -->
-<link href="https://fonts.googleapis.com/css2?family=Great+Vibes&display=swap" rel="stylesheet">
+<link href="https://fonts.googleapis.com/css2?family=Allura&display=swap" rel="stylesheet">
 
 <style>
 *{margin:0;padding:0;box-sizing:border-box;}
-html,body{height:100%;width:100%;overflow:hidden;font-family:'Great Vibes', cursive;}
+html,body{height:100%;width:100%;overflow:hidden;font-family:'Allura', cursive;}
 
 /* Video Background */
 .video-bg{
@@ -72,7 +72,7 @@ html,body{height:100%;width:100%;overflow:hidden;font-family:'Great Vibes', curs
 /* Company Name */
 .brand-container{
   position:absolute;
-  top:40%;
+  top:38%;
   left:50%;
   transform:translate(-50%, -50%);
   z-index:1;
@@ -80,7 +80,7 @@ html,body{height:100%;width:100%;overflow:hidden;font-family:'Great Vibes', curs
   white-space:nowrap;
 }
 .brand-container span{
-  font-size:8rem;
+  font-size:5rem; /* medium size */
   color:#ff006e;
   text-shadow:2px 2px 8px #00fff2;
   opacity:0;
@@ -91,22 +91,22 @@ html,body{height:100%;width:100%;overflow:hidden;font-family:'Great Vibes', curs
 /* Slogan */
 .slogan{
   position:absolute;
-  top:54%;
+  top:50%;
   left:50%;
   transform:translateX(-50%);
-  font-size:2.5rem;
+  font-size:1.8rem; /* medium size */
   color:white;
-  -webkit-text-stroke:2px black;
+  -webkit-text-stroke:1px black;
   opacity:0;
   animation:fadeInSlogan 2s forwards;
-  animation-delay:3s;
+  animation-delay:2.5s;
   z-index:1;
 }
 
 /* Animations */
 @keyframes letterIn{
-  0%{opacity:0; transform:translate(var(--x), var(--y)) rotate(-15deg);}
-  60%{opacity:1; transform:translate(0,0) rotate(5deg);}
+  0%{opacity:0; transform:translate(var(--x), var(--y)) rotate(-10deg);}
+  60%{opacity:1; transform:translate(0,0) rotate(3deg);}
   100%{opacity:1; transform:translate(0,0) rotate(0deg);}
 }
 @keyframes fadeInSlogan{
@@ -114,7 +114,7 @@ html,body{height:100%;width:100%;overflow:hidden;font-family:'Great Vibes', curs
   100%{opacity:1;}
 }
 
-/* VC Ball */
+/* VC ball */
 .vc-ball{
   position:absolute;
   width:90px; height:90px;
@@ -191,11 +191,11 @@ const brandContainer=document.getElementById('brandContainer');
 brandText.split('').forEach((letter,index)=>{
   const span=document.createElement('span');
   span.textContent=letter;
-  let xOffset=(Math.random()*200-100)+'px';
-  let yOffset=(Math.random()*100-50)+'px';
+  let xOffset=(Math.random()*100-50)+'px';
+  let yOffset=(Math.random()*50-25)+'px';
   span.style.setProperty('--x', xOffset);
   span.style.setProperty('--y', yOffset);
-  span.style.animationDelay=`${index*0.25}s`;
+  span.style.animationDelay=`${index*0.2}s`;
   brandContainer.appendChild(span);
 });
 
