--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@ html,body{height:100%;width:100%;overflow:hidden;font-family:'Montserrat', sans-
   top:0; left:0;
   width:100%;
   height:100%;
-  object-fit:contain;
+  object-fit:cover;
   z-index:-2;
 }
 .overlay{
@@ -80,8 +80,8 @@ html,body{height:100%;width:100%;overflow:hidden;font-family:'Montserrat', sans-
   white-space:nowrap;
 }
 .brand-container span{
-  font-size:8rem; /* big */
-  font-family:'Allura', cursive; /* artistic calligraphy */
+  font-size:8rem; /* desktop default */
+  font-family:'Allura', cursive;
   color:#ff006e;
   text-shadow:2px 2px 8px #00fff2;
   opacity:0;
@@ -97,7 +97,7 @@ html,body{height:100%;width:100%;overflow:hidden;font-family:'Montserrat', sans-
   transform:translateX(-50%);
   font-size:2rem;
   font-family:'Montserrat', sans-serif;
-  font-weight:700; /* Black Medium Bold */
+  font-weight:700;
   color:white;
   -webkit-text-stroke:1px black;
   opacity:0;
@@ -120,7 +120,8 @@ html,body{height:100%;width:100%;overflow:hidden;font-family:'Montserrat', sans-
 /* VC Ball */
 .vc-ball{
   position:absolute;
-  width:90px; height:90px;
+  width:90px;
+  height:90px;
   background:white;
   border-radius:50%;
   display:flex;
@@ -145,6 +146,24 @@ html,body{height:100%;width:100%;overflow:hidden;font-family:'Montserrat', sans-
   text-decoration:none;
   font-weight:bold;
   z-index:5;
+}
+
+/* Mobile adjustments */
+@media screen and (max-width:600px){
+  .brand-container span{
+    font-size:4rem; /* smaller on mobile */
+  }
+  .slogan{
+    font-size:1.5rem; /* smaller slogan */
+  }
+  .vc-ball{
+    width:60px;
+    height:60px;
+    font-size:1.5rem;
+  }
+  .menu-icon{
+    font-size:30px;
+  }
 }
 </style>
 </head>
