--- a/services.html
+++ b/services.html
@@ -4,9 +4,7 @@
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>Vos Créations - Services</title>
-
 <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@700&display=swap" rel="stylesheet">
-
 <style>
 *{margin:0;padding:0;box-sizing:border-box;}
 html,body{height:100%;width:100%;overflow-x:hidden;font-family:'Montserrat', sans-serif;}
@@ -18,14 +16,14 @@ html,body{height:100%;width:100%;overflow-x:hidden;font-family:'Montserrat', san
   width:100%;
   height:auto;
   min-height:100%;
-  object-fit:contain; /* fit entire video */
-  z-index:-2;
+  object-fit:contain;
+  z-index:-3;
 }
 .overlay{
   position:absolute; top:0; left:0;
   width:100%; height:100%;
   background: rgba(0,0,0,0.3);
-  z-index:-1;
+  z-index:-2;
 }
 
 /* Top Row */
@@ -35,9 +33,9 @@ html,body{height:100%;width:100%;overflow-x:hidden;font-family:'Montserrat', san
   left:0;
   width:100%;
   height:70px;
-  background:#000000;
-  border-bottom: 4px solid #ffffff;
-  box-shadow:0 0 15px #ffffff;
+  background:#000;
+  border-bottom:4px solid #fff;
+  box-shadow:0 0 15px #fff;
   z-index:3;
   display:flex;
   align-items:center;
@@ -91,7 +89,8 @@ html,body{height:100%;width:100%;overflow-x:hidden;font-family:'Montserrat', san
   left:50%;
   transform:translateX(-50%);
   width:90%;
-  z-index:1;
+  max-width:400px; /* narrower, centered */
+  z-index:2;
   display:flex;
   flex-direction:column;
   gap:20px;
@@ -126,7 +125,16 @@ html,body{height:100%;width:100%;overflow-x:hidden;font-family:'Montserrat', san
   color:#0066ff;
   font-weight:bold;
   text-shadow:0 0 6px #0066ff,0 0 12px #00ccff;
-  z-index:2;
+  z-index:1; /* behind service rows */
+  cursor:pointer;
+  user-select:none;
+  transition: transform 0.3s, opacity 0.3s;
+}
+
+/* Shatter Animation */
+@keyframes shatter {
+  0%{transform: scale(1) rotate(0deg); opacity:1;}
+  100%{transform: scale(0) rotate(720deg); opacity:0;}
 }
 
 /* WhatsApp */
@@ -145,21 +153,10 @@ html,body{height:100%;width:100%;overflow-x:hidden;font-family:'Montserrat', san
 
 /* Mobile adjustments */
 @media screen and (max-width:600px){
-  .page-title{
-    font-size:8vw;
-  }
-  .service-item{
-    font-size:1rem;
-    padding:12px 15px;
-  }
-  .vc-ball{
-    width:50px;
-    height:50px;
-    font-size:1.2rem;
-  }
-  .menu-icon{
-    font-size:28px;
-  }
+  .page-title{font-size:8vw;}
+  .service-item{font-size:1rem;padding:12px 15px;}
+  .vc-ball{width:50px;height:50px;font-size:1.2rem;}
+  .menu-icon{font-size:28px;}
 }
 </style>
 </head>
@@ -218,12 +215,13 @@ function goToOrder(serviceName){
   window.location.href = `order.html?service=${encodeURIComponent(serviceName)}`;
 }
 
-/* Bouncing VC Ball */
+/* Bouncing VC Ball behind content */
 const ball=document.getElementById('vcBall');
 let posX=Math.random()*(window.innerWidth-90);
 let posY=Math.random()*(window.innerHeight-90);
 let velX=(Math.random()*3+1)*(Math.random()<0.5?1:-1);
 let velY=(Math.random()*3+1)*(Math.random()<0.5?1:-1);
+
 function moveBall(){
   posX+=velX; posY+=velY;
   if(posX<0||posX+ball.offsetWidth>window.innerWidth) velX*=-1;
@@ -234,7 +232,17 @@ function moveBall(){
   requestAnimationFrame(moveBall);
 }
 moveBall();
+
+/* VC Ball Shatter on 3 taps */
+let tapCount=0;
+ball.addEventListener('click', ()=>{
+  tapCount++;
+  if(tapCount>=3){
+    ball.style.animation='shatter 1s forwards';
+    setTimeout(()=>{ball.style.display='none';},1000);
+  }
+});
 </script>
 
 </body>
-                              </html>
+  </html>
