--- a/order.html
+++ b/order.html
@@ -1,53 +1,260 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Order - Vos Creations</title>
+<title>Vos Créations - Order</title>
+<link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@700&display=swap" rel="stylesheet">
 <style>
-body{
-margin:0;
-font-family:Montserrat,sans-serif;
-background:url('background2.jpg') center/cover no-repeat fixed;
-color:white;
-text-align:center;
+/* Reset */
+*{margin:0;padding:0;box-sizing:border-box;}
+html,body{height:100%;width:100%;overflow-x:hidden;font-family:'Montserrat', sans-serif;}
+
+/* Background Video */
+.video-bg{
+  position:fixed;
+  top:0; left:0;
+  width:100%;
+  height:auto;
+  min-height:100%;
+  object-fit:cover;
+  z-index:-2;
 }
 .overlay{
-background:rgba(0,0,0,0.8);
-min-height:100vh;
-padding:80px 20px;
+  position:absolute; top:0; left:0;
+  width:100%; height:100%;
+  background: rgba(0,0,0,0.3);
+  z-index:-1;
 }
-form{max-width:400px;margin:auto;}
-input,textarea{
-width:100%;
-padding:10px;
-margin:10px 0;
-border:none;
-border-radius:5px;
+
+/* Top Row */
+.menu-row{
+  position:fixed;
+  top:0;
+  left:0;
+  width:100%;
+  height:70px;
+  background:#000;
+  border-bottom:4px solid #fff;
+  box-shadow:0 0 15px #fff;
+  z-index:3;
+  display:flex;
+  align-items:center;
+  justify-content:flex-end;
+  padding-right:20px;
 }
-button{
-padding:10px 20px;
-background:#ff006e;
-color:white;
-border:none;
-border-radius:20px;
-cursor:pointer;
+.menu-icon{
+  font-size:36px;
+  color:white;
+  cursor:pointer;
 }
-a{color:#00c3ff;text-decoration:none;}
+
+/* Side Menu */
+.side-menu{
+  position:fixed;
+  top:0;
+  right:-250px;
+  width:250px;
+  height:100%;
+  background:#111;
+  padding-top:60px;
+  transition:0.4s;
+  z-index:4;
+}
+.side-menu a{
+  display:block;
+  color:white;
+  padding:15px 30px;
+  text-decoration:none;
+  font-size:1.2rem;
+}
+.side-menu a:hover{background:#ff006e;}
+
+/* Page Title */
+.page-title{
+  text-align:center;
+  margin-top:100px;
+  font-size:4vw;
+  font-weight:700;
+  color:white;
+  text-shadow: 0 0 5px red, 0 0 10px red, 0 0 15px red;
+}
+
+/* Form Styles */
+.order-form{
+  width:90%;
+  max-width:500px;
+  margin:40px auto 60px;
+  background: rgba(0,0,0,0.6);
+  padding:20px;
+  border-radius:15px;
+  color:white;
+}
+.order-form label{
+  display:block;
+  margin-top:15px;
+  margin-bottom:5px;
+  font-weight:bold;
+}
+.order-form input, .order-form textarea, .order-form select{
+  width:100%;
+  padding:10px;
+  border-radius:8px;
+  border:none;
+  margin-bottom:10px;
+  font-size:1rem;
+}
+.order-form select{background:white;color:black;}
+.order-form button{
+  width:100%;
+  padding:12px;
+  background:#0066ff;
+  color:white;
+  border:none;
+  border-radius:10px;
+  font-size:1.2rem;
+  font-weight:bold;
+  cursor:pointer;
+  margin-top:10px;
+}
+.order-form button:hover{
+  background:#3399ff;
+}
+
+/* Bouncing VC Ball */
+.vc-ball{
+  position:absolute;
+  width:80px;
+  height:80px;
+  background:white;
+  border-radius:50%;
+  display:flex;
+  justify-content:center;
+  align-items:center;
+  font-size:2rem;
+  color:#0066ff;
+  font-weight:bold;
+  text-shadow:0 0 6px #0066ff,0 0 12px #00ccff;
+  z-index:5;
+  cursor:pointer;
+  user-select:none;
+}
+
+/* WhatsApp */
+.whatsapp{
+  position:fixed;
+  bottom:20px;
+  right:20px;
+  background:#25D366;
+  color:white;
+  padding:14px 20px;
+  border-radius:30px;
+  text-decoration:none;
+  font-weight:bold;
+  z-index:6;
+}
+
+/* Mobile adjustments */
+@media screen and (max-width:600px){
+  .page-title{font-size:8vw;}
+  .vc-ball{width:50px;height:50px;font-size:1.2rem;}
+  .menu-icon{font-size:28px;}
+  .order-form input, .order-form textarea, .order-form select{font-size:0.9rem;}
+  .order-form button{font-size:1rem;padding:10px;}
+}
 </style>
 </head>
 <body>
-<div class="overlay">
-<h1>Place an Order</h1>
-<form>
-<input type="text" placeholder="Your Name" required>
-<input type="email" placeholder="Your Email" required>
-<textarea placeholder="Describe your project" required></textarea>
-<button type="submit">Submit</button>
-</form>
-<br>
-<a href="index.html">← Back Home</a>
-</div>
-</body>
 
-</html>
+<!-- Background Video -->
+<video autoplay muted loop playsinline class="video-bg">
+  <source src="backgroundvideo3.mp4" type="video/mp4">
+  Your browser does not support HTML5 video.
+</video>
+<div class="overlay"></div>
+
+<!-- Top Row -->
+<div class="menu-row">
+  <div class="menu-icon" onclick="toggleMenu()">☰</div>
+</div>
+
+<!-- Side Menu -->
+<div class="side-menu" id="menu">
+  <a href="index.html">Home</a>
+  <a href="services.html">Services</a>
+  <a href="portfolio.html">Portfolio</a>
+  <a href="order.html">Order</a>
+</div>
+
+<!-- Page Title -->
+<h1 class="page-title">Place Your Order</h1>
+
+<!-- Order Form -->
+<form class="order-form" action="https://formspree.io/f/xqedwvyb" method="POST">
+  <label for="name">Your Name</label>
+  <input type="text" name="name" id="name" placeholder="Enter your name" required>
+
+  <label for="email">Your Email</label>
+  <input type="email" name="email" id="email" placeholder="Enter your email" required>
+
+  <label for="service">Select Service</label>
+  <select name="service" id="service" onchange="toggleOtherField(this)">
+    <option value="" disabled selected>Choose a service</option>
+    <option value="Graphics Design">Graphics Design</option>
+    <option value="Web Design">Web Design</option>
+    <option value="Logo Design">Logo Design</option>
+    <option value="Flyer/Brochure Design">Flyer/Brochure Design</option>
+    <option value="Other">Other (Specify below)</option>
+  </select>
+
+  <div id="otherServiceContainer" style="display:none;">
+    <label for="otherService">Specify Other Service</label>
+    <input type="text" name="otherService" id="otherService" placeholder="Enter custom service">
+  </div>
+
+  <label for="details">Order Details</label>
+  <textarea name="details" id="details" rows="5" placeholder="Provide details about your order" required></textarea>
+
+  <button type="submit">Submit Order</button>
+</form>
+
+<!-- Bouncing VC Ball -->
+<div class="vc-ball" id="vcBall">VC</div>
+
+<!-- WhatsApp -->
+<a href="https://wa.me/2349069205351" class="whatsapp" target="_blank">WhatsApp</a>
+
+<script>
+/* Side Menu Toggle */
+function toggleMenu(){
+  let menu=document.getElementById('menu');
+  menu.style.right=(menu.style.right==='0px')?'-250px':'0';
+}
+
+/* Bouncing VC Ball Animation */
+const ball=document.getElementById('vcBall');
+let posX=Math.random()*(window.innerWidth-80);
+let posY=Math.random()*(window.innerHeight-80);
+let velX=(Math.random()*3+1)*(Math.random()<0.5?1:-1);
+let velY=(Math.random()*3+1)*(Math.random()<0.5?1:-1);
+
+function moveBall(){
+  posX+=velX; posY+=velY;
+  if(posX<0||posX+ball.offsetWidth>window.innerWidth) velX*=-1;
+  if(posY<0||posY+ball.offsetHeight>window.innerHeight) velY*=-1;
+  velX+=(Math.random()-0.5)*0.2;
+  velY+=(Math.random()-0.5)*0.2;
+  ball.style.transform=`translate(${posX}px, ${posY}px)`;
+  requestAnimationFrame(moveBall);
+}
+moveBall();
+
+/* Show/Hide Other Service Field */
+function toggleOtherField(select){
+  const container = document.getElementById('otherServiceContainer');
+  container.style.display = (select.value === "Other") ? "block" : "none";
+}
+</script>
+
+</body>
+  </html>
